--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "switcher-io/switcher-php",
     "description": "PHP wrapper for switcher.io api",
     "type": "library",
-    "license": "MIT License",
+    "license": "MIT",
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0"
