--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "SwitcherIO\\": "src/"
+        }
     }
 }
