--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,15 @@
     },
     "autoload": {
         "psr-4": {
-            "SwitcherIO\\": "src/"
+            "SwitcherIO\\": "src/SwitcherIO/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.4@dev"
     }
 }
