--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ php:
 
 before_script:
  - composer self-update
- - composer install --prefer-source --no-interaction --dev
+ - composer install --prefer-source --no-interaction
