--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4@dev"
+        "phpunit/phpunit": ">=4.8-stable"
     }
 }
